--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -33,8 +33,11 @@
     flex-direction: column
     align-items: center
     justify-content: center
-    padding: 2rem
-    background-color: $dark
+    padding: 2.4375rem 3.125rem 1.75rem 3.125rem
+    background-color: $light
+    width: 100%
+    max-width: 23.1875rem
+    box-shadow: 0 0 7px 6px rgba(34, 34, 34, 0.05)
   &--visibility
     opacity: 1
     visibility: visible
@@ -56,7 +59,9 @@
   &__text
     margin-bottom: 3rem
     font-size: 1.5rem
-    color: $primary
+    font-family: 'Ubuntu', serif
+    font-size: 1rem
+    color: #878585
   &__form
     display: flex
     flex-direction: column
@@ -70,19 +75,6 @@
       position: relative
       margin-bottom: 1.12rem
       width: 100%
-      // &:nth-of-type(3)
-      //   margin-bottom: 0rem
-    // &--light
-    //   &::placeholder
-    //     font-family: 'Futura Book', cursive
-    //     color: $light
-    //     opacity: 1
-  &__policy
-    position: relative
-    margin-bottom: 2.7rem
-    & > .invalid
-      left: 0
-      bottom: -1.5rem
   &__button
     width: 100%
     max-width: 11.8125rem
@@ -109,10 +101,6 @@ div
       padding: 0
       right: 0
       bottom: -0.8rem
-.policy
-  & > div
-    &.invalid
-      width: 100%
 
 
 
