--- a/sass/templates/_news.sass
+++ b/sass/templates/_news.sass
@@ -115,6 +115,9 @@
         line-height: 2rem
         color: #0d0d0d
       &__date
+        position: absolute
+        left: 1.3125rem
+        top: 1.5rem
         display: flex
         flex-direction: column
         justify-content: space-between
@@ -135,10 +138,10 @@
           font-weight: 400
           color: $light
   &__img
-    height: 100%
+    max-height: 100%
     width: 100%
+    position: relative
     &__container
-      background: transparent url('../img/news/bg-img-news.jpg') no-repeat center / cover
       flex-basis: 70%
       width: 100%
       height: 100%
@@ -148,7 +151,6 @@
       display: flex
       justify-content: flex-start
       align-items: flex-start
-      padding: 1.5rem 1.3125rem
   &__desc
     display: flex
     flex-direction: column
