--- a/sass/templates/_reviews.sass
+++ b/sass/templates/_reviews.sass
@@ -47,11 +47,12 @@
         color: $primary
   &__slider
     width: 100%
+    height: 100%
     display: flex
     flex-direction: row
     justify-content: center
     align-items: center
-    padding-bottom: 2.5rem
+    padding-bottom: 3.8rem
     &__button
       display: flex
       justify-content: center
@@ -59,14 +60,15 @@
       width: 2rem
       height: 3.7391rem
     &__card
-      display: none
-      &:first-of-type
-        display: block
+      display: flex
+      flex-direction: column
+      justify-content: space-between
+      max-height: 100%
       &__container
         width: 100%
         height: 100%
         max-width: 58.1875rem
-        height: 18.75rem
+        max-height: 18.75rem
         margin-left: 2.5rem
         margin-right: 2.5rem
         display: flex
@@ -76,17 +78,17 @@
       &__title
         margin: 0
         padding: 0
-        height: 100%
+        height: 10rem
         width: 100%
-        max-height: 10.1875rem
+        max-height: 100%
         max-width: 58.1875rem
         padding-bottom: 2.3125rem
-        margin-bottom: 0.5rem
+        margin-bottom: 1rem
         text-align: center
         font-family: 'Ubuntu', serif
         font-size: 1.375rem
         font-weight: 300
-        line-height: 2rem
+        line-height: 2.3rem
         color: #0d0d0d
   &__person
     display: flex
