--- a/sass/templates/_services.sass
+++ b/sass/templates/_services.sass
@@ -54,6 +54,7 @@
     box-shadow: none
     &:hover
       box-shadow: 0 0 10px 3px rgba(34, 34, 34, 0.05)
+      border: none
       &::after
         content: ''
         position: absolute
