--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -26,6 +26,24 @@ button, input
     height: 100%
     max-width: 13.6875rem
     max-height: 3.0625rem
+  &__scroll-up
+    width: auto
+    height: auto
+    padding: 0.5rem
+    font-family: 'Ubuntu', serif
+    background-color: #e3fbdd
+    &__container
+      width: 100vw
+    &__flex-block
+      position: fixed
+      left: 0
+      bottom: 0
+      display: flex
+      justify-content: center
+      z-index: 299
+      width: 100%
+      &--hidden
+        visibility: hidden
   &Return
     padding: 1rem 3rem
     color: $light
@@ -84,6 +102,24 @@ button, input
       justify-content: space-between
       align-items: center
       padding: 1,9375rem 0
+  &__logo
+    &--mobile
+      z-index: 20
+      position: fixed
+      left: 1rem
+      top: 1rem
+      width: 50px
+      height: 50px
+      display: flex
+      align-items: center
+      justify-content: center
+      flex-direction: column
+      &:hover
+        cursor: pointer
+  &__img
+    &--mobile
+      width: 100%
+      height: 100%
 
 
 .label
@@ -119,11 +155,12 @@ button, input
     &:hover
       max-width: 2rem
       max-height: 3.7391rem
+      cursor: pointer
 .burger-menu
   z-index: 20
   position: fixed
-  right: 2rem
-  top: 2rem
+  right: 1rem
+  top: 1rem
   width: 50px
   height: 50px
   display: flex
