--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -23,7 +23,7 @@
   right: 0
   width: 100%
   height: 100%
-  background-color: transparent
+  background-color: rgba($dark, 0.5)
   z-index: 199
   display: flex
   align-items: center
@@ -81,6 +81,17 @@
     &--OK
       padding: 0.5rem
       font-size: 1rem
+  &__close
+    position: absolute
+    top: 0
+    right: 0
+    width: 28px
+    height: 28px
+    background: #e3fbdd url('../img/icons/x-circle.svg') no-repeat center
+    border-radius: 50%
+    border: none
+    margin: 12px
+    cursor: pointer
 div
   &.invalid
     position: absolute
