--- a/sass/templates/_news.sass
+++ b/sass/templates/_news.sass
@@ -70,6 +70,7 @@
         transparent: background 0.3s
         &:hover
           background: transparent url('../img/icons/long-arrow-left-hover.png') no-repeat center / cover
+          cursor: pointer
       &__right
         width: 3rem
         height: 1.75rem
@@ -77,6 +78,7 @@
         transparent: background 0.3s
         &:hover
           background: transparent url('../img/icons/long-arrow-right-hover.png') no-repeat center / cover
+          cursor: pointer
     &__card
       position: relative
       width: 100%
@@ -184,8 +186,8 @@
       color: #201f1f
       font-weight: 300
       line-height: 1.625rem
-      margin-bottom: 3.5rem
-      max-height: 7.5625rem
+      margin-bottom: 2.8rem
+      max-height: 8.2rem
       overflow: hidden
       
 
